@@ -1,6 +1,6 @@
 package Date::Holidays::GB;
 
-our $VERSION = '0.012';
+our $VERSION = '0.013';
 
 # ABSTRACT: Determine British holidays - Current UK public and bank holiday dates up to 2019
 
@@ -174,7 +174,7 @@ sub _holiday {
     return join( ', ', @strings );
 }
 
-sub date_generated { '2019-01-09' }
+sub date_generated { '2020-02-11' }
 
 1;
 
@@ -408,9 +408,9 @@ __DATA__
 2020-04-10	SCT	Good Friday
 2020-04-13	EAW	Easter Monday
 2020-04-13	NIR	Easter Monday
-2020-05-04	EAW	Early May bank holiday
-2020-05-04	NIR	Early May bank holiday
-2020-05-04	SCT	Early May bank holiday
+2020-05-08	EAW	Early May bank holiday (VE day)
+2020-05-08	NIR	Early May bank holiday (VE day)
+2020-05-08	SCT	Early May bank holiday (VE day)
 2020-05-25	EAW	Spring bank holiday
 2020-05-25	NIR	Spring bank holiday
 2020-05-25	SCT	Spring bank holiday
@@ -425,3 +425,30 @@ __DATA__
 2020-12-28	EAW	Boxing Day
 2020-12-28	NIR	Boxing Day
 2020-12-28	SCT	Boxing Day
+2021-01-01	EAW	New Year’s Day
+2021-01-01	NIR	New Year’s Day
+2021-01-01	SCT	New Year’s Day
+2021-01-04	SCT	2nd January
+2021-03-17	NIR	St Patrick’s Day
+2021-04-02	EAW	Good Friday
+2021-04-02	NIR	Good Friday
+2021-04-02	SCT	Good Friday
+2021-04-05	EAW	Easter Monday
+2021-04-05	NIR	Easter Monday
+2021-05-03	EAW	Early May bank holiday
+2021-05-03	NIR	Early May bank holiday
+2021-05-03	SCT	Early May bank holiday
+2021-05-31	EAW	Spring bank holiday
+2021-05-31	NIR	Spring bank holiday
+2021-05-31	SCT	Spring bank holiday
+2021-07-12	NIR	Battle of the Boyne (Orangemen’s Day)
+2021-08-02	SCT	Summer bank holiday
+2021-08-30	EAW	Summer bank holiday
+2021-08-30	NIR	Summer bank holiday
+2021-11-30	SCT	St Andrew’s Day
+2021-12-27	EAW	Christmas Day
+2021-12-27	NIR	Christmas Day
+2021-12-27	SCT	Christmas Day
+2021-12-28	EAW	Boxing Day
+2021-12-28	NIR	Boxing Day
+2021-12-28	SCT	Boxing Day
