@@ -2,8 +2,13 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+ [Update]
+ - 2021 dates added
+ - generate script includes old dates removed from live data
+
 0.012  2019-01-09 17:59:34 GMT
 
+ [Update]
  - 2020 dates added
 
 0.011  2018-04-04 15:44:41 BST
@@ -38,7 +43,7 @@ Revision history for {{$dist->name}}
 
  [Maintenance]
  - generate from gov.uk JSON not ical
- - simplify generation script, remove templating 
+ - simplify generation script, remove templating
 
 0.005  2014-05-22 13:48:14 BST
 
